# RAGulator

./: README.md  pyproject.toml  requirements.txt  run_app.sh
ragulator/: __init__.py  app.py  config.yaml  infer.py  types.py  utils.py
