[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragulator"
version = "0.1.1"
description = "Lightweight Out-of-Context Detectors for Grounded Text Generation"
authors = [
    { name = "Ian Poey", email = "ianpoey@ocbc.com" },
    { name = "Jiajun Liu", email = "" },
    { name = "Qishuai Zhong", email = "qishuaizhong@ocbc.com" },
    { name = "Adrien Chenailler", email = "" },
]
readme = "README.md"
requires-python = ">=3.9,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.25.2,<2.0.0",
    "sentencepiece>=0.2.0,<1.0.0",
    "spacy>=3.7.4,<4.0.0",
    "torch>=2.0.0,<2.6.0",
    "transformers>=4.29.2,<5.0.0",
]

[tool.setuptools]
packages = ["ragulator"]

[project.urls]
Homepage = "https://github.com/ipoeyke/RAGulator"
Issues = "https://github.com/ipoeyke/RAGulator/issues"